--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Tennis Mania</title>
+		<link rel="stylesheet" href="./Styles/StyleSheet1.css" />
 	</head>
 <body>
 <h1>GREATEST TENNIS MATHCES OF ALL TIME OF BIG 3 </h1>
